[gd_scene load_steps=4 format=2]

[ext_resource path="res://graphics/episode_selections/Theorie.png" type="Texture" id=1]
[ext_resource path="res://src/TheoryRoomSelector.gd" type="Script" id=2]
[ext_resource path="res://graphics/lab/backArrow.png" type="Texture" id=3]

[node name="TheoryRoomSelector" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 0.48, 0.48 )
texture = ExtResource( 1 )

[node name="RoomCAD" type="TextureButton" parent="Background"]
margin_left = -706.0
margin_top = -256.0
margin_right = -154.0
margin_bottom = -115.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomClass" type="TextureButton" parent="Background"]
margin_left = -706.0
margin_top = -106.0
margin_right = -154.0
margin_bottom = 35.0001
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomAula" type="TextureButton" parent="Background"]
margin_left = -706.0
margin_top = 44.0
margin_right = -154.0
margin_bottom = 185.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomGym" type="TextureButton" parent="Background"]
margin_left = -127.0
margin_top = 44.0
margin_right = 712.0
margin_bottom = 185.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomSecretary" type="TextureButton" parent="Background"]
margin_left = -127.0
margin_top = -106.0
margin_right = 712.0
margin_bottom = 35.0001
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomNaturalSciences" type="TextureButton" parent="Background"]
margin_left = -127.0
margin_top = -256.0
margin_right = 712.0
margin_bottom = -115.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 160.0
margin_top = 600.0
margin_right = 260.0
margin_bottom = 680.0
rect_rotation = 180.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Background/RoomCAD" to="." method="_on_RoomCAD_pressed"]
[connection signal="pressed" from="Background/RoomClass" to="." method="_on_RoomClass_pressed"]
[connection signal="pressed" from="Background/RoomAula" to="." method="_on_RoomAula_pressed"]
[connection signal="pressed" from="Background/RoomGym" to="." method="_on_RoomGym_pressed"]
[connection signal="pressed" from="Background/RoomSecretary" to="." method="_on_RoomSecretary_pressed"]
[connection signal="pressed" from="Background/RoomNaturalSciences" to="." method="_on_RoomNaturalSciences_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
